* Fixed issue where tweet button appeared overlapping tags * Fixed remaining IE7 CSS issues

--- a/assets/scss/aol.livebloglite.scss
+++ b/assets/scss/aol.livebloglite.scss
@@ -53,24 +53,28 @@
     .lb-post-caption {
     }
 
-    .lb-post-timestamp {
-        display: block;
+    .lb-post-info {
         float: left;
-        position: relative;
         clear: both;
-        color: #999999;
-        font-size: 0.7em;
-        line-height: 17px;
+        position: relative;
 
         .twitter-share-button {
             // Config
             $tweetButtonWidth: 56px;
-            $leftPadding: 5px;
+            $leftPadding: 10px;
 
-            bottom: -3px;
+            bottom: -2px;
             position: absolute;
             right: ($tweetButtonWidth + $leftPadding) * -1;
         }
+    }
+    
+    .lb-post-timestamp {
+        display: block;
+        float: left;
+        color: #999999;
+        font-size: 0.7em;
+        line-height: 17px;
     }
 
     .lb-post-tags {
@@ -159,4 +163,22 @@
         position: relative;
     }
     
+}
+
+/* Styles for IE7 */
+*:first-child+html {
+    .lb {
+        .lb-toolbar {
+            padding-bottom: 15px;
+        }
+    }
+} 
+
+/* Styles for IE 6 and below */
+* html {
+    .lb {
+        .lb-toolbar {
+            padding-bottom: 15px;
+        }
+    }
 }
